@@ -1,2 +1,5 @@
 2002-07-19
- - Wiki: Added the editTag page, that prevented from editing feedback area on locked pages (mikl)  
+ - Wiki: Added the editTag page, that prevented from editing feedback
+   area on locked pages (mikl)
+ - Wiki: Fixed a function clause error when the number of parameters
+   number of the call to editPage is not 1 or 3. (mikl)
